feat: initial 1.0 architecture with Docker, JWT, and Valkey
- Initialize project with Spring Boot 4.0.3 and Java 21.
- Implement production-grade persistence with PostgreSQL 16.
- Add Valkey 9.0.1 (Redis fork) for high-performance caching.
- Configure Spring Boot Docker Compose for zero-config local setup.
- Integrate JWT-based RBAC (STAFF/USER roles).
- Set up Testcontainers with @ServiceConnection for integration tests.
- Add multi-language support (EN, FR, ES) via message bundles.
- Provide comprehensive README with API docs and setup guides.